--- a/package.json
+++ b/package.json
@@ -3,12 +3,10 @@
   "version": "1.0.0",
   "main": "index.js",
   "type": "commonjs",
-  "scripts": {
-    "start": "node index.js"
-  },
+  "scripts": { "start": "node index.js" },
   "dependencies": {
     "express": "^4.19.2",
-    "qrcode-terminal": "^0.12.0",
+    "qrcode": "^1.5.3",                 // ← ESTA LÍNEA ES CLAVE
     "whatsapp-web.js": "^1.25.0"
   }
 }
