--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": { "start": "node index.js" },
   "dependencies": {
     "express": "^4.19.2",
-    "qrcode": "^1.5.3",                 // ← ESTA LÍNEA ES CLAVE
+    "qrcode": "^1.5.3",                 
     "whatsapp-web.js": "^1.25.0"
   }
 }
